# plotXVG

./: README.md  plotxvg  pyproject.toml  setup.py  showcase_plotxvg.py  xvgutils.py
act_xvgfiles/: COULOMB-PC-allelec.xvg  COULOMB.xvg
gmx_xvgfiles/: 2dproj_PC1_PC2.xvg  intra_energies.xvg  resarea.xvg  rmsd_backbone.xvg  rmsd_sidechain.xvg  rmsf_residues.xvg  sasa_total.xvg
manual/: generate_manual.py  main.tex
manual/chapters/: example_plots.tex  flags.tex  installation.tex  introduction.tex  preface.tex  usage.tex
manual/plotXVG_manual/: plotXVG_manual.aux  plotXVG_manual.lof  plotXVG_manual.out  plotXVG_manual.toc
manual_plotxvg/: main.tex
manual_plotxvg/chapters/: flags.tex  usage.tex
manual_plotxvg/manual/: manual.aux
modified_xvgfiles/: ammonium#chloride.xvg  rmsf_res_66-76x0.8.xvg  rmsf_res_66-76x1.2.xvg
plotXVG_manual/: generate_manual.py
plotXVG_manual/chapters/: example_plots.tex  (+3 more)
plotXVG_output/: 00default_command.txt  010squarefig_command.txt  010stats_command.txt  011res_command.txt  011stats_command.txt  012bar_command.txt  012res_command.txt  013bar_command.txt  013threebars_command.txt  014font_command.txt  014threebars_command.txt  015Alot_of_panels_command.txt  01only_lines_command.txt  02markers_5datasets_command.txt  05two_panels_command.txt  06mult_panels_command.txt  06two_panels_command.txt  07colors_command.txt  07mult_panels_command.txt  07vary_panel_content_command.txt  08equalaxes_command.txt  09equalaxes_command.txt  09squarefig_command.txt
plotxvg/: __init__.py  plotxvg.py
src/: cli.py  plotxvg.py
tests/: test.py
(+120 files in other folders)
